# Retail-Customer-Analysis

./: .gitignore  main.py  pyproject.toml  setup.py
conf/: configs.yaml  schema.yaml
data/: data_dictionary.md
notebooks/: 01_data_ingestion_analysis.ipynb  02_customer_analysis.ipynb
src/: constants.py
src/components/: data_ingestion.py  data_preprocessor.py
src/pipelines/: stage_01_data_ingestion.py  stage_03_data_preprocessor.py
src/utils/: basic_utils.py
